add kvcreds mount

--- a/charts/cmc-citizen-frontend/values.preview.template.yaml
+++ b/charts/cmc-citizen-frontend/values.preview.template.yaml
@@ -8,6 +8,7 @@ postgresql:
 rpe-feature-toggle-api:
   releaseNameOverride: ${SERVICE_NAME}-java
   importer:
+    kvSecretRef: kvcreds
     cron:
       enabled: false
     oneoff:
