--- a/charts/cmc-citizen-frontend/values.preview.template.yaml
+++ b/charts/cmc-citizen-frontend/values.preview.template.yaml
@@ -10,7 +10,7 @@ rpe-feature-toggle-api:
     releaseNameOverride: ${SERVICE_NAME}-java
     postgresql:
       image:
-        tag:
+        tag: '11.3.0'
   importer:
     apiUrl: http://${SERVICE_NAME}-java/api/ff4j/store/features/
     kvSecretRef: kvcreds
