--- a/charts/cmc-citizen-frontend/values.preview.template.yaml
+++ b/charts/cmc-citizen-frontend/values.preview.template.yaml
@@ -40,5 +40,5 @@ nodejs:
 
 idam-pr:
   redirect_uris:
-    Money Claims - Citizene:
+    Money Claims - Citizen:
       - https://${SERVICE_FQDN}/receiver
