--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         - http_proxy
         - https_proxy
         - no_proxy
-    image: hmcts.azurecr.io/hmcts/cmc-citizen-frontend
+    image: hmctspublic.azurecr.io/cmc/citizen-frontend
   citizen-integration-tests:
     build:
       context: .
