--- a/charts/cmc-citizen-frontend/values.preview.template.yaml
+++ b/charts/cmc-citizen-frontend/values.preview.template.yaml
@@ -1,18 +1,41 @@
 tags:
-  - rpe-feature-toggle-api-pod
-  - idam-pr
+  rpe-feature-toggle-api-pod: true
+  idam-pr: true
+  postgresql-pod: false  # stop any subcharts starting their own postgres instance
 
 postgresql:
-  enabled: true # for rpe-feature-toggle-api
+  image:
+    tag: '11.3.0'
+  resources:
+    requests:
+      cpu: 25m
+  initdbScripts:
+    init.sql: |-
+      CREATE DATABASE claimstore WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+      CREATE DATABASE cmc WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+      CREATE DATABASE features WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+      CREATE DATABASE "data-store" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+      CREATE DATABASE "definition-store" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+  postgresqlUsername: hmcts
+  postgresqlPassword: hmcts
+  postgresqlDatabase: user-profile
+  nameOverride: postgres
+  persistence:
+    enabled: false
 
 rpe-feature-toggle-api:
   java:
-    releaseNameOverride: ${SERVICE_NAME}-java
+    releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
+    environment:
+      FEATURES_DB_HOST: ${SERVICE_NAME}-postgres
+      FEATURES_DB_NAME: features
+      FEATURES_DB_USER_NAME: hmcts
+      FEATURES_DB_PASSWORD: hmcts
     postgresql:
       image:
         tag: '11.3.0'
   importer:
-    apiUrl: http://${SERVICE_NAME}-java/api/ff4j/store/features/
+    apiUrl: http://${SERVICE_NAME}-ftr-tgl-api/api/ff4j/store/features/
     kvSecretRef: kvcreds
     cron:
       enabled: false
@@ -29,16 +52,43 @@ nodejs:
   ingressHost: ${SERVICE_FQDN}
   environment:
     LOG_LEVEL: DEBUG
-    FEATURE_TOGGLES_API_URL: http://${SERVICE_NAME}-java
+    FEATURE_TOGGLES_API_URL: http://${SERVICE_NAME}-ftr-tgl-api
+    CLAIM_STORE_URL: http://${SERVICE_NAME}-claim-store
     IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
     IDAM_AUTHENTICATION_WEB_URL: https://idam-web-public.aat.platform.hmcts.net
     IDAM_S2S_AUTH: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
     PAY_URL: http://payment-api-aat.service.core-compute-aat.internal
     FEES_URL: http://fees-register-api-aat.service.core-compute-aat.internal
-    CLAIM_STORE_URL: http://cmc-claim-store-aat.service.core-compute-aat.internal
     DRAFT_STORE_URL: http://draft-store-service-aat.service.core-compute-aat.internal
 
 idam-pr:
   redirect_uris:
     Money Claims - Citizen:
       - https://${SERVICE_FQDN}/receiver
+
+cmc-claim-store:
+  java:
+    releaseNameOverride: ${SERVICE_NAME}-claim-store
+    image: hmctspublic.azurecr.io/cmc/claim-store:latest
+    environment:
+      LOG_LEVEL: DEBUG
+      IDAM_S2S_AUTH_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
+      SEND_LETTER_URL: http://rpe-send-letter-service-aat.service.core-compute-aat.internal
+      IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
+      PDF_SERVICE_URL: http://cmc-pdf-service-aat.service.core-compute-aat.internal
+      DOCUMENT_MANAGEMENT_URL: http://dm-store-aat.service.core-compute-aat.internal
+      DOC_ASSEMBLY_URL: false
+      FRONTEND_BASE_URL: https://${SERVICE_FQDN}
+      RESPOND_TO_CLAIM_URL: https://${SERVICE_FQDN}/first-contact/start
+      CLAIM_STORE_DB_HOST: ${SERVICE_NAME}-postgres
+      CLAIM_STORE_DB_USERNAME: hmcts
+      CLAIM_STORE_DB_PASSWORD: hmcts
+      CMC_DB_HOST: ${SERVICE_NAME}-postgres
+      CMC_DB_USERNAME: hmcts
+      CMC_DB_PASSWORD: hmcts
+      CORE_CASE_DATA_API_URL: http://${SERVICE_NAME}-data-store-api
+      FEATURE_TOGGLES_CCD_ENABLED: true
+      FEATURE_TOGGLES_CCD_ASYNC_ENABLED: false
+      FEATURE_TOGGLES_SAVE_CLAIM_STATE_ENABLED: true
+      FEATURE_TOGGLES_ASYNC_EVENT_OPERATIONS_ENABLED: true
+      FEATURE_TOGGLES_EMAILTOSTAFF: true
