--- a/charts/cmc-citizen-frontend/requirements.yaml
+++ b/charts/cmc-citizen-frontend/requirements.yaml
@@ -17,6 +17,13 @@ dependencies:
     repository: '@hmcts'
     tags:
       - cmc-claim-store
+  - name: ccd
+    version: ~3.0.0
+    repository: '@hmcts'
+    tags:
+      - cmc-claim-store
   - name: postgresql
     version: ~2.6.5
     repository: '@stable'
+    tags:
+      - cmc-citizen-frontend-postgresql-pod
