--- a/charts/cmc-citizen-frontend/values.preview.template.yaml
+++ b/charts/cmc-citizen-frontend/values.preview.template.yaml
@@ -1,6 +1,8 @@
 tags:
+  cmc-citizen-frontend-postgresql-pod: true
   rpe-feature-toggle-api-pod: true
   idam-pr: true
+  cmc-claim-store: true
   postgresql-pod: false  # stop any subcharts starting their own postgres instance
 
 postgresql:
@@ -92,3 +94,67 @@ cmc-claim-store:
       FEATURE_TOGGLES_SAVE_CLAIM_STATE_ENABLED: true
       FEATURE_TOGGLES_ASYNC_EVENT_OPERATIONS_ENABLED: true
       FEATURE_TOGGLES_EMAILTOSTAFF: true
+
+ccd:
+  ingressHost: ${SERVICE_FQDN}
+  ingressIP: ${INGRESS_IP}
+  consulIP: ${CONSUL_LB_IP}
+  postgresql:
+    nameOverride: postgres
+  idam-pr:
+    releaseNameOverride: ${SERVICE_NAME}-ccd-idam-pr
+    redirect_uris:
+      CCD:
+        - https://case-management-web-${SERVICE_FQDN}/oauth2redirect
+      CCD Admin:
+        - https://admin-web-${SERVICE_FQDN}/oauth2redirect
+  apiGateway:
+    s2sKey: ${API_GATEWAY_S2S_KEY}
+    idamClientSecret:
+      value: ${API_GATEWAY_IDAM_SECRET}
+  userProfileApi:
+    authorisedServices: ccd_admin,ccd_data,ccd_definition,cmc_claim_store
+  dataStoreApi:
+    s2sKey: ${DATA_STORE_S2S_KEY}
+    s2sAuthorisedServices: cmc_claim_store,ccd_gw
+  definitionStoreApi:
+    s2sKey: ${DEFINITION_STORE_S2S_KEY}
+    s2sAuthorisedServices: ccd_admin,ccd_data,cmc_claim_store,ccd_gw
+  caseManagementWeb:
+    enabled: true
+    environment:
+      NODE_TLS_REJECT_UNAUTHORIZED: 0
+  adminWeb:
+    enabled: true
+    s2sKey: ${ADMIN_S2S_KEY}
+    idamClientSecret:
+      value: ${ADMIN_WEB_IDAM_SECRET}
+    environment:
+      NODE_TLS_REJECT_UNAUTHORIZED: 0
+  importer:
+    userprofile:
+      enabled: true
+      jurisdictions:
+        - CMC
+      users:
+        - civilmoneyclaims+ccd@gmail.com|CMC|MoneyClaimCase|open
+      userProfileDatabaseHost: ${SERVICE_NAME}-postgres
+      userProfileDatabasePort: 5432
+      userProfileDatabaseUser: hmcts
+      userProfileDatabasePassword: hmcts
+      userProfileDatabaseName: user-profile
+    definition:
+      enabled: true
+      image: hmcts.azurecr.io/hmcts/cmc-ccd-definition-importer:1.2.12
+      kvSecretRef: kvcreds
+      gitSecretRef: kvcreds
+      redirectUri: https://case-management-web-${SERVICE_FQDN}/oauth2redirect
+      definitionFilename: cmc-ccd.xlsx
+      userRoles:
+        - citizen
+        - caseworker-cmc
+        - caseworker-cmc-solicitor
+        - caseworker-cmc-systemupdate
+        - letter-holder
+        - caseworker-autotest1
+        - caseworker-cmc-anonymouscitizen
