--- a/docker-compose.nightly-functional-tests.yml
+++ b/docker-compose.nightly-functional-tests.yml
@@ -2,7 +2,7 @@ version: '2.1'
 
 services:
     citizen-integration-tests:
-      image: hmcts/cmc-citizen-integration-tests:${CITIZEN_INTEGRATION_TESTS_VERSION:-latest}
+      image: hmctspublic.azurecr.io/cmc/citizen-integration-tests:${CITIZEN_INTEGRATION_TESTS_VERSION:-latest}
       command: test:integration
       environment:
         - WEB_DRIVER_HOST=remote-webdriver
