--- a/charts/cmc-citizen-frontend/values.yaml
+++ b/charts/cmc-citizen-frontend/values.yaml
@@ -20,7 +20,8 @@ nodejs:
     FEATURE_FINE_PRINT: true
     FEATURE_RETURN_ERROR_TO_USER: true
     FEATURE_MOCK_PAY: false
-    FEATURE_MEDIATION: false
+    FEATURE_MEDIATION: true
+    FEATURE_MEDIATION_PILOT: true
     FEATURE_DIRECTIONS_QUESTIONNAIRE: false
     FEATURE_NEW_DASHBOARD_STATUS: false
   keyVaults:
