--- a/charts/cmc-citizen-frontend/values.yaml
+++ b/charts/cmc-citizen-frontend/values.yaml
@@ -22,7 +22,7 @@ nodejs:
     FEATURE_MOCK_PAY: false
     FEATURE_MEDIATION: true
     FEATURE_MEDIATION_PILOT: true
-    FEATURE_DIRECTIONS_QUESTIONNAIRE: false
+    FEATURE_DIRECTIONS_QUESTIONNAIRE: true
     FEATURE_NEW_DASHBOARD_STATUS: false
   keyVaults:
     cmc:
