--- a/docker-compose.nightly-functional-tests.yml
+++ b/docker-compose.nightly-functional-tests.yml
@@ -17,6 +17,7 @@ services:
         - CLAIM_STORE_URL
         - HEALTHCHECK_CITIZEN=true
         - FEATURE_ADMISSIONS
+        - FEATURE_MEDIATION
         - FEATURE_TESTING_SUPPORT
       volumes:
         - ./functional-output:/usr/src/app/output
