--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@hmcts/cmc-common-frontend": "^1.56.0",
     "@hmcts/cmc-draft-store-middleware": "^2.0.0",
     "@hmcts/cmc-validators": "^0.2.3",
+    "@hmcts/ctsc-web-chat": "^0.3.9",
     "@hmcts/draft-store-client": "^1.1.1",
     "@hmcts/info-provider": "^1.0.0",
     "@hmcts/nodejs-healthcheck": "^1.5.1",
@@ -40,7 +41,6 @@
     "@hmcts/os-places-client": "^1.0.4",
     "@hmcts/properties-volume": "0.0.9",
     "@hmcts/requestretry": "^1.1.2",
-    "@hmcts/ctsc-web-chat": "^0.3.9",
     "@taoqf/javascript-state-machine": "^3.1.3",
     "@types/config": "^0.0.34",
     "@types/cookies": "^0.7.2",
@@ -69,6 +69,7 @@
     "csurf": "^1.10.0",
     "express": "^4.17.1",
     "govuk-elements-sass": "^3.1.3",
+    "govuk-frontend": "^3.1.0",
     "govuk_template_jinja": "0.25.0",
     "gulp": "^4.0.2",
     "helmet": "^3.18.0",
